--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
   <br>
   <h5>31/10/2023 = Aniversario Da Cidade</h5>
   <br>
-  <h5>01/11/2023 = Festa da Cidade</h5>
+  <h5>01/11/2023 = Festa da Cidadee</h5>
   <br>
   <h5>02/11/2023 = Desfile</h5>
   <br>
